--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Ignore virtual environment directories
 /.venv
 
-# Ignore dataset
+# Ignore dataset .h5 file
 /dataset/hoverboard_bms_dataset.h5
 
 # Ignore Python cache files
 __pycache__/
 *.pyc
+
+# Ignore Excel files
+*.xlsx
